--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="/app.js"></script>
+        
+
+
+    <h1 id="heading">Hello guy</h1>
+    <script>
+        const h1 = document.querySelector('#heading');
+        
+        console.log(h1); // in ra phần tử h1
+        console.dir(h1); // in ra đối tượng DOM của phần tử h1
+
+
+    </script>
 </body>
 </html>
